--- a/_config.yml
+++ b/_config.yml
@@ -50,10 +50,10 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
 
 # SEO Related
-google_site_verification :
-bing_site_verification   :
-alexa_site_verification  :
-yandex_site_verification :
+#google_site_verification :
+#bing_site_verification   :
+#alexa_site_verification  :
+#yandex_site_verification :
 
 # Social Sharing
 #twitter:
@@ -85,31 +85,31 @@ author:
   bio              : "An Engineering Manager with a side of Systems Engineering"
   location         : "Cedar Park, TX"
   employer         : "EyeLock, LLC"
-  pubmed           :
+  pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=xSH5raQAAAAJ"
   email            : "zach@tschirh.art"
   researchgate     : "https://www.researchgate.net/profile/Zachary_Tschirhart"
   uri              :
-  bitbucket        :
+  bitbucket        : 
   codepen          :
   dribbble         :
   flickr           :
   facebook         :
   foursquare       :
   github           : "ztschir"
-  google_plus      :
-  keybase          :
+  google_plus      : 
+  keybase          : "ztschir"
   instagram        :
-  impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
+  impactstory      :
   lastfm           :
-  linkedin         :
-  orcid            : #"http://orcid.org/yourorcidurl"
-  pinterest        :
-  soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  linkedin         : "https://linkedin.com/in/zachtschirhart"
+  orcid            :
+  pinterest        : 
+  soundcloud       : 
+  stackoverflow    :
   steam            :
   tumblr           :
-  twitter          : #"replacethistwitterhandle"
+  twitter          :
   vine             :
   weibo            :
   xing             :
@@ -255,7 +255,7 @@ sass:
 permalink: /:categories/:title/
 # paginate: 5 # amount of posts to show
 # paginate_path: /page:num/
-timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: America/Chicago 
 
 
 # Plugins
