--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      :
   lastfm           :
-  linkedin         : "https://linkedin.com/in/zachtschirhart"
+  linkedin         : "zachtschirhart"
   orcid            :
   pinterest        : 
   soundcloud       : 
