--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ atom_feed:
 author:
   name             : "Zachary S. Tschirhart"
   avatar           : "profile.png"
-  bio              : "An Engineering Manager with a side of Systems Engineering"
+  bio              : "An Engineering Manager with a splash of Systems Engineer"
   location         : "Cedar Park, TX"
   employer         : "EyeLock, LLC"
   pubmed           : 
