removed portfolio and small changes

--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ atom_feed:
 author:
   name             : "Zachary S. Tschirhart"
   avatar           : "profile.png"
-  bio              : "An Engineering Manager with a splash of Systems Engineer"
-  location         : "Cedar Park, TX"
+  bio              : "A generalist engineering manager with the abilty to dig deep"
+  location         : "Austin, TX"
   employer         : "EyeLock, LLC"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=xSH5raQAAAAJ"
