--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ atom_feed:
 # Site Author
 author:
   name             : "Zachary S. Tschirhart"
-  avatar           : "profile.png"
+  avatar           : "Portrait.JPG"
   bio              : "A generalist engineering manager with the abilty to dig deep"
   location         : "Austin, TX"
   employer         : "EyeLock, LLC"
