--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ atom_feed:
 author:
   name             : "Zachary S. Tschirhart"
   avatar           : "Portrait.JPG"
-  bio              : "A generalist engineering manager with the abilty to dig deep"
+  bio              : "Software Engineering Manager With a Broad Skillset"
   location         : "Austin, TX"
   employer         : "EyeLock, LLC"
   pubmed           : 
