--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ atom_feed:
 
 # Site Author
 author:
-  name             : "Zachary S. Tschirhart"
+  name             : "Zachary S. Tschirhart, P.E."
   avatar           : "Portrait.JPG"
   bio              : "Software Engineering Manager With a Broad Skillset"
   location         : "Austin, TX"
