--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Zach Tschirhart's Website"
+title                    : "Zachary Tschirhart"
 title_separator          : "-"
 name                     : &name "Zachary S. Tschirhart"
-description              : &description "Static Website for Zach Tschirhart"
+description              : &description "Zachary Tschirhart"
 url                      : https://tschirh.art
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ztschir/ztschir.github.io"
