--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "Portrait.JPG"
   bio              : "Software Engineering Manager With a Broad Skillset"
   location         : "Austin, TX"
-  employer         : "EyeLock, LLC"
+  employer         : "Cray/Hewlett Packard Enterprise"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=xSH5raQAAAAJ"
   email            : "zach@tschirh.art"
