--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ author:
   stackoverflow    :
   steam            :
   tumblr           :
-  twitter          :
+  twitter          : "zachtschirhart"
   vine             :
   weibo            :
   xing             :
