--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ atom_feed:
 author:
   name             : "Zachary S. Tschirhart, P.E."
   avatar           : "Portrait.JPG"
-  bio              : "Software Engineering Manager With a Broad Skillset"
+  bio              : "Software Engineering Professional"
   location         : "Austin, TX"
-  employer         : "Cray/Hewlett Packard Enterprise"
+  employer         : "Cray/HPE"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=xSH5raQAAAAJ"
   email            : "zach@tschirh.art"
