--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ atom_feed:
 # Site Author
 author:
   name             : "Zachary S. Tschirhart, P.E."
-  avatar           : "Headshot.png"
+  avatar           : "20250114_zach_0024_web.jpg"
   bio              : "HPC/AI Software Engineering Professional"
   location         : "Austin, TX"
   employer         : "Sustainment"
